# dfsync

./: .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml
dfsync/: backends.py  char_ui.py  cli.py  config.py  distribution.py  filters.py  kube_credentials.py  lib.py  monitor.py  test_dfsync.py  test_distribution.py  test_kube_credentials.py  test_lib.py
dfsync/backends/: __init__.py  kube.py  kube_exec.py  rsync.py
tests/: test_dfsync.py
