[tool.poetry]
name = "dfsync"
version = "0.3.11"
description = ""
authors = ["Mihai Balint <balint.mihai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
watchdog = "^2.0.2"
gitpython = "^3.1.14"
kubernetes = "^12.0.1"
click = "^7"
toml = "^0.10.2"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.13.3"
flake8 = "^4.0.1"
pycodestyle = "^2.8.0"

[tool.poetry.scripts]
dfsync = "dfsync.cli:dfsync"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
