[tool.poetry]
name = "dfsync"
version = "0.4.5"
description = ""
authors = ["Mihai Balint <balint.mihai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.0.2"
gitpython = "^3.1.14"
kubernetes = "^28.1.0"
click = "^8"
toml = "^0.10.2"
tenacity = "^8.0.1"
click-default-group = "^1.2.2"
paramiko = {version = "^3.2.0", extras = ["invoke"]}
black = "23.7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^8"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
pycodestyle = "^2.8.0"

[tool.poetry.scripts]
dfsync = "dfsync.cli:dfsync"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
